# cementplantsimulator

./: .gitignore  CMakeLists.txt  README.md  Readme.md
app/: CMakeLists.txt  cement_plant_window.ui  cementplantmainwindow.cpp  cementplantmainwindow.h  main.cpp
src/: CMakeLists.txt  cement_plant.cpp  cement_plant.h  simulationengine.cpp  simulationengine.h  softplc.cpp  softplc.h  tagbridge.cpp  tagbridge.h
src/gui/: CMakeLists.txt  alarmsummary.cpp  alarmsummary.h  class_room.ui  classroomwidget.cpp  classroomwidget.h  faceplatedialog.cpp  faceplatedialog.h  mimicwidget.cpp  mimicwidget.h  operator_panel.ui  operatorpanel.cpp  operatorpanel.h  opstationwidget.cpp  opstationwidget.h  plantmainwidget.cpp  plantmainwidget.h  processmodel.cpp  processmodel.h  processvariable.cpp  processvariable.h  trendviewer.cpp  trendviewer.h
